force-app/main/default/objects/Co_Applicants__c/Co_Applicants__c.object-meta.xml
<CustomObject>
    <label>Co-Applicants</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Co-Applicants  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>