force-app/main/default/objects/Co_Applicants__c/fields/Alternate_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile__c</fullName>
    <label>Alternate Mobile</label>
    <type>Phone</type>
</CustomField>