force-app/main/default/objects/Co_Applicants__c/fields/Applicant_Age__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Age__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(Date_of_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>