force-app/main/default/objects/Co_Applicants__c/fields/Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Phone__c</fullName>
    <label>Applicant Phone</label>
    <type>Phone</type>
</CustomField>