force-app/main/default/objects/Co_Applicants__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Co-Applicants</relationshipLabel>
    <relationshipName>Co_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>