force-app/main/default/objects/Co_Applicants__c/fields/Driving_License__c.field-meta.xml
<CustomField>
    <fullName>Driving_License__c</fullName>
    <label>Driving License Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>