force-app/main/default/objects/Co_Applicants__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <label>Employer/Company Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>