force-app/main/default/objects/Co_Applicants__c/fields/Existing_Loan_EMI__c.field-meta.xml
<CustomField>
    <fullName>Existing_Loan_EMI__c</fullName>
    <label>Existing Loan EMI</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>