force-app/main/default/objects/Co_Applicants__c/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <label>Father/Spouse Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>