force-app/main/default/objects/Co_Applicants__c/fields/Is_Minor__c.field-meta.xml
<CustomField>
    <fullName>Is_Minor__c</fullName>
    <formula>Applicant_Age__c &lt; 18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Minor</label>
    <type>Checkbox</type>
</CustomField>