force-app/main/default/objects/Co_Applicants__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <defaultValue>&quot;Indian&quot;</defaultValue>
    <label>Nationality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>