force-app/main/default/objects/Co_Applicants__c/fields/Office_City__c.field-meta.xml
<CustomField>
    <fullName>Office_City__c</fullName>
    <label>Office City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>