force-app/main/default/objects/Co_Applicants__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>