force-app/main/default/objects/Co_Applicants__c/fields/POA_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>POA_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POA Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>