force-app/main/default/objects/Co_Applicants__c/fields/POA_Required__c.field-meta.xml
<CustomField>
    <fullName>POA_Required__c</fullName>
    <formula>Is_Minor__c =true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POA Required</label>
    <type>Checkbox</type>
</CustomField>