force-app/main/default/objects/Co_Applicants__c/fields/Work_Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience_Years__c</fullName>
    <label>Work Experience (Years)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>